	PR binutils/1486 binutils/: 	* configure.in: Don't define DISASSEMBLER_NEEDS_RELOCS. 	* configure: Regenerate. 	* objdump.c (struct objdump_disasm_info): Don't check for 	DISASSEMBLER_NEEDS_RELOCS. 	(objdump_print_addr): Likewise. 	(disassemble_bytes): Check disassembler_needs_relocs from 	disassemble_info at run-time instead of DISASSEMBLER_NEEDS_RELOCS 	at compile-time. 	(disassemble_section): Likewise. 	(disassemble_data): Initialize it.

include/:
	* dis-asm.h (struct disassemble_info): Add
	disassembler_needs_relocs.

objdump/:
	* disassemble.c (disassemble_init_for_target): Set
	disassembler_needs_relocs for bfd_arch_arm.